# ffmpegplayer

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: android-video-1.2.27.aar  voice-lib-1.0.4.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BackAndForth.cpp  BackAndForth.h  VideoUtil.cpp  VideoUtil.h  cpp.rar  main.cpp  memory.cpp  native-lib.cpp  processpcm.cpp  sox_reverb_effect.h  test.c  transcode2.cpp
app/src/main/java/com/example/gx/ffmpegplayer/: ImageUtilEngine.java  MainActivity.java  MediaRecordActivity.java  MyApplication.java  PermissionUtil.java  Utils.java
app/src/main/res/layout/: activity_main.xml  activity_meidia_record.xml  activity_video.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
